@@ -38,6 +38,7 @@ INSTL_DATABASE_HOST_DESC="This is usually &quot;localhost&quot;"
 INSTL_DATABASE_HOST_LABEL="Host Name"
 INSTL_DATABASE_NAME_DESC="Some hosts allow only a certain DB name per site. Use table prefix in this case for distinct Joomla! sites."
 INSTL_DATABASE_NAME_LABEL="Database Name"
+INSTL_DATABASE_NO_SCHEMA="No database schema exists for this database type."
 INSTL_DATABASE_OLD_PROCESS_DESC="Any existing backup tables from former Joomla! installations will be replaced"
 INSTL_DATABASE_OLD_PROCESS_LABEL="Old Database Process"
 INSTL_DATABASE_PASSWORD_DESC="For site security using a password for the mysql account is mandatory"
